# kinesis-firehose

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust-quickstart.yml
examples/: async-pool-stdin-agent.rs  sync-stdin-agent.rs
kinesis-firehose-pool-stdin-agent/: Cargo.toml
kinesis-firehose-pool-stdin-agent/src/: main.rs
kinesis-firehose-producer/: Cargo.toml
kinesis-firehose-producer/src/: async_producer.rs  async_producer_pool.rs  buffer.rs  error.rs  lib.rs  producer.rs  put_record_batcher.rs  sync_producer.rs
kinesis-firehose-stdin-agent/: Cargo.toml
kinesis-firehose-stdin-agent/src/: main.rs
src/: async_producer.rs  async_producer_pool.rs  buffer.rs  error.rs  lib.rs  put_record_batcher.rs  sync_producer.rs
