[package]
name = "kinesis-firehose-producer"
version = "0.1.0"
edition = "2018"
authors = ["Miles Frankel <miles.frankel@gmail.com>"]
license = "MIT"
description = "AWS Kinesis Firehose Producer"
repository = "https://github.com/asg0451/kinesis-firehose"
keywords = ["AWS", "Kinesis", "Firehose"]
categories = ["network-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.46"
bytes = "1.0.1"
fehler = "1.0.0"
futures = "0.3.13"
log = "0.4.14"
rand = "0.8.3"
rusoto_core = "0.46.0"
rusoto_firehose = "0.46.0"
thiserror = "1.0.24"
# TODO: find what features i really need
tokio = { version = "1.4.0", features = ["full"]}

[dev-dependencies]
test-env-log = "0.2.6"
# for examples
anyhow = "1.0.38"
env_logger = "0.8.3"
structopt = "0.3.21"
